k8s/cloud-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-service
  template:
    metadata:
      labels:
        app: cloud-service
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "kubernetes.io/hostname"
                    operator: In
                    values:
                      - pool-quickcloud-6uh67  #pool-quickcloud-6uh67
      containers:
#       spring.datasource.password=sAvtad-sidgew-9morjo
# spring.datasource.username=bitesaitzz
# spring.datasource.url=jdbc:postgresql://quickcloud-db.postgres.database.azure.com:5432/postgres
# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
# spring.jpa.hibernate.ddl-auto=none
# spring.jpa.show-sql=true
# spring.mvc.hiddenmethod.filter.enabled=true
        - name: cloud-service
          image: aliaksandrshydlouski/cloud-service:2.013
          env:
            - name: SPRING_DATA_REDIS_HOST
              value: "redis"
            - name: SPRING_DATA_REDIS_PORT
              value: "6379"
            - name: SPRING_RABBITMQ_HOST
              value: "rabbitmq"
            - name: SPRING_RABBITMQ_PORT
              value: "5672"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-service
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: cloud-service
