k8s/gateway-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "kubernetes.io/hostname"
                    operator: In
                    values:
                      - pool-quickcloud-6uh67
      containers:
        - name: gateway-service
          image: aliaksandrshydlouski/gateway-service:2.2
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: gateway-service
