k8s/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "kubernetes.io/hostname"
                    operator: In
                    values:
                      - pool-quickcloud-6uh67
      containers:
        - name: notification-service
          image: aliaksandrshydlouski/notification-service:2.030
          env:
            - name: SPRING_RABBITMQ_HOST
              value: "rabbitmq"
            - name: SPRING_RABBITMQ_PORT
              value: "5672"
            - name: SPRING_RABBITMQ_USERNAME
              value: "guest"
            - name: SPRING_RABBITMQ_PASSWORD
              value: "guest"
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: notification-service
